--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
 .DS_Store
+_notes/dwsync.xml
+css/_notes/dwsync.xml
+CSXS/_notes/dwsync.xml
+fonts/_notes/dwsync.xml
+html/_notes/dwsync.xml
+img/status_icons/_notes/dwsync.xml
+lib/_notes/dwsync.xml
